              Broken after Netpbm 10.26 (January 2005) but no later than
              Netpbm 10.35 (August 2006).

              pnmcrop: Don't allow -borderfile with -reportXXX.  It doesn't
              work.

              pnmcrop: fix bug: -bgcolor doesn't work.  Always present
              (-bgcolor was introduced in Netpbm 10.86 (March 2019)).

19.03.30 BJH  Release 10.86.00

              Add pamfind.

              Add pambrighten.

              Add pamhue.

              pnmcrop: Add -bg-color, bg-corner, -reportfull, -reportsize,
              -blank-image .

              pamtopng: Add -interlace .

              pamenlarge: Add -scale, -xscale, -yscale .

              pamenlarge: Much faster for PBM with xscale factor above 10;
              slightly faster for xscale factor 2-10.

              pamfile: Add -machine and -size .

              pamscale: Add -reportonly

              pamstretch-gen: Add -quiet, -plain.

              pamstretch-gen: Use -dropedge on the 'pamstretch' piece for
              better looking output.

              pamstretch: Accept scale factor of 1 as a parameter (already
              was accepted with -xscale and -yscale options).

              pamstretch: Don't mess with edge when scale factor is 1,
              regardless of -dropedge and -blackedge.

              ppmwheel: Add -huevalue, -huesaturation, -maxval .

              various: Fix unnormalizing code so a value exactly between two
              sample values rounds consistently up.  Affects many programs.

              pstopnm: Fix bug: -textalphabits has no effect.  Always broken.
              (-textalphabits was new in Netpbm 10.53 (December 2010)).

              pamtopng: Fix sBit chunk, bit shift value for 1-, 2-, and 4-bit-
              per-sample images.  Always broken (Pamtopng was new in Netpbm
              10.71 (June 2015)).

              pamtopng: Fix buffer overrun.  Always broken (Pamtopng was new