@@ -23,6 +23,9 @@ not yet  BJH  Release 10.87.00
               pnmcrop: fix bug: -bgcolor doesn't work.  Always present
               (-bgcolor was introduced in Netpbm 10.86 (March 2019)).
 
+              pbmtozinc: fix wrong output on big-endian machines.  Broken in
+              primordial Netpbm, ca 1991.
+
 19.03.30 BJH  Release 10.86.00
 
               Add pamfind.
